# -IR2121-2025-2026-Robotica-mobil

Patrolling Task/goals/: CMakeLists.txt  map9.pgm  package.xml
Patrolling Task/goals/install/: local_setup.sh  setup.sh
Patrolling Task/goals/install/goals/lib/goals/: version2_publisher
Patrolling Task/goals/install/goals/share/ament_index/resource_index/parent_prefix_path/: goals
Patrolling Task/goals/install/goals/share/goals/: package.dsv  package.ps1  package.sh  package.xml
Patrolling Task/goals/install/goals/share/goals/cmake/: goalsConfig.cmake
Patrolling Task/goals/log/: latest_build
Patrolling Task/goals/rosbag2_2025_11_20-16_33_50/: metadata.yaml
Patrolling Task/goals/rosbag2_2025_11_20-18_20_21/: metadata.yaml
Patrolling Task/goals/rosbag2_2025_11_20-18_26_10/: metadata.yaml
Patrolling Task/goals/src/: publisher.cpp
Patrolling Task/rosbag_patrolling_V1/: metadata.yaml
Teleoperation/: CONFIGURACION RVIZ.rviz  Mundo_LAB
Teleoperation/ESTCE Recorrido pequeño/: metadata.yaml
Teleoperation/Guillem Grabaciones/rosbag recorrido llarg/: metadata.yaml
Teleoperation/Guillem Grabaciones/rosbag recorrido mitja/: metadata.yaml
Teleoperation/MAPPING CASA/: map10.pgm  map10.yaml  map2 (copia).pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml  map5.pgm  map5.yaml  map6.pgm  map6.yaml  map7.pgm  map7.yaml  map8.pgm  map8.yaml  map9.yaml
Teleoperation/MODELOS 3D/COMPLEMENTO_LAB/: model.config  model.sdf
Teleoperation/MODELOS 3D/MODELO_LAB/: model.config  model.sdf
Teleoperation/Maps del homework/Maps Toolbox/: map1.pgm  map1.yaml  map10.pgm  map10.yaml  map11.pgm  map11.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml  map5.pgm  map5.yaml  map6.pgm  map6.yaml  map7.pgm  map7.yaml  map8.pgm  map8.yaml  map9.pgm  map9.yaml
Teleoperation/Maps del homework/ROSBAG_MAPPING_"BUENO"/: metadata.yaml
Teleoperation/Maps del homework/ROSBAG_MAPPING_CASA_NORMAL/: metadata.yaml
Teleoperation/Maps del homework/maps cartografer/: map1.pgm  map1.yaml  map10.pgm  map10.yaml  map11.pgm  map11.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml  map5.pgm  map5.yaml  map6.pgm  map6.yaml  map7.pgm  map7.yaml  map8.pgm  map8.yaml  map9.pgm  map9.yaml
Teleoperation/Maps del homework/maps_RTAB/: map1.pgm  map1.yaml  map10.pgm  map10.yaml  map2.yaml  map3.yaml  map4.yaml  map5.yaml  map6.yaml  map7.yaml  map8.yaml  (+1 more)
Teleoperation/ROSBAG_simulacion_modelo_lab/: metadata.yaml
Teleoperation/entrega planta estce vueltas/: launch_rosbag.bash  launch_rviz.bash
Teleoperation/rosbag webots/: metadata.yaml
Teleoperation/rosbag2_2025_09_15-19_09_45/: metadata.yaml
Teleoperation/rosbag2_2025_09_17-15_58_59/: metadata.yaml
Teleoperation/rosbag_autocalibracion_simulador/: metadata.yaml
Teleoperation/rosbag_lab_modelo_bueno/: metadata.yaml
Teleoperation/rosbag_mapping_!/: metadata.yaml
Teleoperation/scripts/: launch_rosbag.bash  launch_rqt.bash  launch_tb3_webots.bash
(+16 files in other folders)
